--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,16 +1,13 @@
 
 {
+  "image_name": "cyberdojofoundation/bcpl_all_tests_passed",
   "display_name": "BCPL, all_tests_passed",
-
   "visible_filenames": [
      "hiker.test.b",
      "hiker.b",
      "cyber-dojo.sh"
   ],
-
-  "image_name": "cyberdojofoundation/bcpl_all_tests_passed",
-
-  "filename_extension": ".b",
-
+  "filename_extension": [ ".b" ],
+  "max_seconds": 10,
   "tab_size": 4
 }
